--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "start": "app.jsx"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "dom": "^0.0.3",
+    "dotenv": "^16.3.1",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "router": "^1.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
