--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "router": "^1.3.8"
+    "react-router-dom": "^6.17.0",
+    "router": "^1.3.8",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
